# thread

./: .gitignore  CMakeLists.txt  DESCRIPTION  NAMESPACE  README.md  TODO
R/: RcppExports.R  example.R  interface.R  memory.R  native.R  threading.R  zzz.R
inst/patch/: README  expose-alloc-vector-callback.patch
man/: new_thread.Rd  threads.Rd
src/: Makevars  README  RcppExports.cpp  TODO  cppthreads.cpp  cppthreads.h  debug.cpp  debug.h  dll.cpp  is_something.cpp  is_something.h  memory.cpp  memory.h  native.cpp  rinterpreter.cpp  rinterpreter.h  tests.cpp  thread.cpp  threading.cpp  threading.h  threads.cpp  threads.h  tryeval.c
src/R/: Defn.h
tests/: testthat.R
tests/testthat/: test-native-call.R  test-synchronized-memory.R  test-thread-errors.R
